--- a/libre_py/webify/templates/index.html
+++ b/libre_py/webify/templates/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-	<title>Libre Biblioteca Query</title>
+	<title>Used Books Query</title>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='librestyle.css') }}">
 </head>
 <body>
-	<p>Welcome to the book search tool for SI. Many of your colleagues have graciously donated over <span>{{ book_count }} </span>books to their work locations for other people to use. Looking for a good murder mystery? How about something to help you brush up on your C++ coding? Wondering if someone else has donated a book you want? Wonder no more, simply use the tool below to search and (hopefully) find what you need.</p>
+	<p>Welcome to the used book search tool. This location currently stocks over <span>{{ book_count }} </span>books for purchase. Looking for a good murder mystery? How about something to help you brush up on your C++ coding? Wondering if we have a book you want? Wonder no more, simply use the tool below to search and (hopefully) find what you need.</p>
 	<hr>
 
 	<form method="post" action="{{ url_for('results') }}">
