Added auto increment function

--- a/libre_py/webify/templates/index.html
+++ b/libre_py/webify/templates/index.html
@@ -19,6 +19,7 @@
 		<hr>
 		<button type="submit">Submit Query</button>
 	</form>
+	<a href="{{ url_for('stocking') }}">Stock Books</a>
 	
 
 </body>
