--- a/libre_py/webify/static/librestyle.css
+++ b/libre_py/webify/static/librestyle.css
@@ -1,3 +1,12 @@
+.mainbody {
+	max-width: 80%;
+	background-color: rgba(0, 153, 51, .6);
+	margin: 0 auto;
+	padding: 10px;
+}
+
 body {
-	background-color: #a3a3c2;
+	background-color: #d9d9d9;
+	font-family: Arial, Helvetica, sans-serif;
+	
 }
