--- a/libre_py/webify/templates/index.html
+++ b/libre_py/webify/templates/index.html
@@ -6,22 +6,12 @@
 </head>
 <body>
 	<div class="mainbody">
-	<p>Welcome to the used book search tool. This location currently stocks over <span>{{ book_count }} </span>books for purchase. Looking for a good murder mystery? How about something to help you brush up on your C++ coding? Wondering if we have a book you want? Wonder no more, simply use the tool below to search and (hopefully) find what you need.</p>
-	<hr>
-
-	<form method="post" action="{{ url_for('results') }}">
-		<label for="user_choice">I would like to search by: </label>
-		<select id="user_choice" name="user_choice">
-			<option value="isbn">ISBN</option>
-			<option value="author">Author</option>
-			<option value="title">Title</option>
-		</select>
-		<input type="text" name="user_input" value="{{ request.form['user_input'] }}" />
-		<hr>
-		<button type="submit">Submit Query</button>
-	</form>
-	<a href="{{ url_for('stocking') }}">Stock Books</a>
-	
+		<div id="enduser">
+			<p>Browse Used Books</p>
+		</div>
+		<div id="owner">
+			<p>Owner Login</p>
+		</div>
 </div>
 </body>
 
