--- a/libre_py/webify/static/librestyle.css
+++ b/libre_py/webify/static/librestyle.css
@@ -10,3 +10,13 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	
 }
+
+#enduser {
+	width: 50%;
+	float: left;
+}
+
+#owner {
+	width: 50%;
+	float: left;
+}
