Further CSS refinements

--- a/libre_py/webify/static/librestyle.css
+++ b/libre_py/webify/static/librestyle.css
@@ -14,9 +14,11 @@ body {
 #enduser {
 	width: 50%;
 	float: left;
+	text-align: center;
 }
 
 #owner {
 	width: 50%;
 	float: left;
+	text-align: center;
 }
