--- a/libre_py/webify/templates/index.html
+++ b/libre_py/webify/templates/index.html
@@ -7,10 +7,10 @@
 <body>
 	<div class="mainbody">
 		<div id="enduser">
-			<p>Browse Used Books</p>
+			<h1>Browse Used Books</h1>
 		</div>
 		<div id="owner">
-			<p>Owner Login</p>
+			<h1>Owner Login</h1>
 		</div>
 </div>
 </body>
