--- a/libre_py/webify/static/librestyle.css
+++ b/libre_py/webify/static/librestyle.css
@@ -13,12 +13,14 @@ body {
 
 #enduser {
 	width: 50%;
+	height: auto;
 	float: left;
 	text-align: center;
 }
 
 #owner {
 	width: 50%;
+	height: auto;
 	float: left;
 	text-align: center;
 }
