--- a/libre_py/webify/templates/index.html
+++ b/libre_py/webify/templates/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="mainbody">
 		<div id="enduser">
-			<h1>Browse Used Books</h1>
+			<h1><a href="{{ url_for('browse') }}">Browse Used Books</a></h1>
 		</div>
 		<div id="owner">
 			<h1>Owner Login</h1>
