--- a/libre_py/webify/templates/index.html
+++ b/libre_py/webify/templates/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Used Books Query</title>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='librestyle.css') }}">
+	<link rel="icon" href="static/book_icon.png">
 </head>
 <body>
 	<div class="mainbody">
