--- a/libre_py/webify/templates/stocking.html
+++ b/libre_py/webify/templates/stocking.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Stocking</title>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='librestyle.css') }}">
+	<link rel="icon" href="static/book_icon.png">
 </head>
 <body>
 	<p>This page is intended for stocking purposes. To begin, simply scan the barcode or manually enter the ISBN of the book that you are attempting to enroll. If the book exists in the database already, the count will be increased by one. If it does not, you will be redirected to the enrollment page.</p>
