--- a/libre_py/webify/templates/results.html
+++ b/libre_py/webify/templates/results.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Search Results</title>
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='librestyle.css') }}">
+	<link rel="icon" href="static/book_icon.png">
 </head>
 <body>
 {% block content %}
