--- a/libre_py/webify/static/librestyle.css
+++ b/libre_py/webify/static/librestyle.css
@@ -2,6 +2,7 @@
 	max-width: 80%;
 	height: 100%;
 	background-color: rgba(0, 153, 51, .6);
+	background-size: cover;
 	margin: 0 auto;
 	padding: 10px;
 }
