--- a/libre_py/webify/templates/stocking.html
+++ b/libre_py/webify/templates/stocking.html
@@ -10,6 +10,10 @@
 	<hr>
 
 	<form method="POST">
+		<label for="stock">Stock</label>
+		<input type="radio" id="stock" name="decision" value="{{ request.form['stock'] }}" checked>
+		<label for="sell">Sell</label>
+		<input type="radio" id="sell" name="decision" value="{{ request.form['sell'] }}">
 		<label>ISBN / Barcode: </label>
 		<input type="text" for="barcode_input" name="barcode_input" value="{{ request.form['barcode_input'] }}" />
 		<hr>
