--- a/libre_py/webify/templates/stocking.html
+++ b/libre_py/webify/templates/stocking.html
@@ -11,7 +11,7 @@
 
 	<form method="POST">
 		<label for="stock">Stock</label>
-		<input type="radio" id="stock" name="decision" for="decision" value="stock" checked>
+		<input type="radio" id="stock" name="decision" for="decision" value="stock">
 		<label for="sell">Sell</label>
 		<input type="radio" id="sell" name="decision" for="decision" value="sell">
 		<label>ISBN / Barcode: </label>
