--- a/libre_py/webify/templates/browse.html
+++ b/libre_py/webify/templates/browse.html
@@ -21,6 +21,7 @@
 		<hr>
 		<button type="submit">Submit Query</button>
 	</form>
+	<a href="{{ url_for('stocking') }}">Stock Books</a>
 	
 </div>
 </body>
