--- a/libre_py/webify/templates/index.html
+++ b/libre_py/webify/templates/index.html
@@ -8,10 +8,10 @@
 <body>
 	<div class="mainbody">
 		<div id="enduser">
-			<h1><a href="{{ url_for('browse') }}">Browse Used Books</a></h1>
+			<a href="{{ url_for('browse') }}"><h1>Browse Used Books</h1></a>
 		</div>
 		<div id="owner">
-			<h1>Owner Login</h1>
+			<a href="{{ url_for('owner') }}"><h1>Owner Login</h1></a>
 		</div>
 </div>
 </body>
