further login added

--- a/libre_py/webify/templates/index.html
+++ b/libre_py/webify/templates/index.html
@@ -11,7 +11,7 @@
 			<a href="{{ url_for('browse') }}"><h1>Browse Used Books</h1></a>
 		</div>
 		<div id="owner">
-			<a href="{{ url_for('owner') }}"><h1>Owner Login</h1></a>
+			<a href="{{ url_for('login') }}"><h1>Owner Login</h1></a>
 		</div>
 </div>
 </body>
