--- a/libre_py/webify/templates/signup.html
+++ b/libre_py/webify/templates/signup.html
@@ -16,6 +16,13 @@
 		<label>E-mail: </label>
 		<input type="text" for="email" name="email" value="{{ request.form['email'] }}" />
 		<hr>
+		<label>Address: </label>
+		<input type="text" for="address" name="address" value="{{ request.form['address'] }}" />
+		<label>Business Name: </label>
+		<input type="text" for="business_name" name="business_name" value="{{ request.form['business_name'] }}" />
+		<label>Phone: </label>
+		<input type="text" for="phone" name="phone" value="{{ request.form['phone'] }}" />
+		<hr>
 		<button type="submit">Login</button>
 	</form>
 </div>
