fixed results page

--- a/libre_py/webify/testing/templates/results.html
+++ b/libre_py/webify/testing/templates/results.html
@@ -12,9 +12,17 @@
 	<p>Found the following results:</p>
  {% for book in books %}
  	<ul>
- 		<li> Value One: {{ book['title'] }}
+ 		<li> Title: {{ book['title'] }}</li>
+ 		<li> Author: {{ book['author'] }}</li>
+ 		<li> ISBN: {{ book['isbn'] }}</li>
+ 		<li> Page Count: {{ book['page_count'] }}</li>
+ 		<li> Book Format: {{ book['book_format'] }}</li>
+ 		<li> Genre: {{ book['genre'] }}</li>
+ 		<li> Summary: {{ book['summary'] }}</li>
+ 		<li> Quantity: {{ book['stock'] }}</li>
 {% endfor %}
 </ul>
+<hr>
 {% endblock %}
 <a href="{{ url_for('index') }}">Return Home</a>
 </body>
