--- a/libre_py/webify/templates/results.html
+++ b/libre_py/webify/templates/results.html
@@ -11,16 +11,18 @@
 <ul>
 	<p>Found the following results:</p>
  {% for book in books %}
-	<li>Title: {{ book['title'] }}</li>
-	<li>Author: {{ book['author'] }}</li>
-	<li>ISBN: {{ book['isbn'] }}</li>
-	<li>Page Count: {{ book['page_count'] }}</li>
-	<li>Book Format: {{ book['book_format'] }}</li>
-	<li>Genre: {{ book['genre'] }}</li>
-	<li>Summary: {{ book['summary'] }}</li>
-	<hr>
+ 	<ul>
+ 		<li> Title: {{ book['title'] }}</li>
+ 		<li> Author: {{ book['author'] }}</li>
+ 		<li> ISBN: {{ book['isbn'] }}</li>
+ 		<li> Page Count: {{ book['page_count'] }}</li>
+ 		<li> Book Format: {{ book['book_format'] }}</li>
+ 		<li> Genre: {{ book['genre'] }}</li>
+ 		<li> Summary: {{ book['summary'] }}</li>
+ 		<li> Quantity: {{ book['stock'] }}</li>
 {% endfor %}
 </ul>
+<hr>
 {% endblock %}
 <a href="{{ url_for('index') }}">Return Home</a>
 </body>
