--- a/docker/source_code/templates/stocking.html
+++ b/docker/source_code/templates/stocking.html
@@ -23,6 +23,15 @@
 	</form>
 	<hr>
 	<a href="{{ url_for('index') }}">Return Home</a>
+	{% with messages = get_flashed_messages() %}
+		{% if messages %}
+			<ul>
+			{% for message in messages %}
+				<li>{{ message }}</li>
+			{% endfor %}
+			</ul>
+		{% endif %}
+	{% endwith %}
 	
 
 </body>
