--- a/docker/source_code/templates/stocking.html
+++ b/docker/source_code/templates/stocking.html
@@ -6,7 +6,7 @@
 	<link rel="icon" href="static/book_icon.png">
 </head>
 <body>
-	<p>This page is intended for stocking purposes. To begin, simply scan the barcode or manually enter the ISBN of the book that you are attempting to enroll. If the book exists in the database already, the count will be increased by one. If it does not, you will be redirected to the enrollment page.</p>
+	<p>This page is intended for stocking purposes. To begin, simply scan the barcode or manually enter the ISBN of the book that you are attempting to stock or sell. If the book exists in the database already, the count will be increased by one. If it does not, you will be redirected to the enrollment page.</p>
 	<div name="top_bar">
 		<ul>
 			<li>Business Name</li>
